[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Sheet/Forbidden_Lands/Item_aditor/Item_Class_checkbox_Group.tres" type="ButtonGroup" id=1]
[ext_resource path="res://Scenes/Sheet/Forbidden_Lands/Itens/Item_illustrations/Large_Shield.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Sheet/Forbidden_Lands/Attributes_Points_button_styles_Radio.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/Sheet/Forbidden_Lands/Item_aditor/Items_list_menu.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.225937, 0.23616, 0.261719, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.223529, 0.235294, 0.262745, 1 )

[node name="Panel" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -519.5
margin_top = -309.5
margin_right = 519.5
margin_bottom = 309.5
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1039.0
margin_bottom = 30.0
mouse_filter = 0
mouse_default_cursor_shape = 13

[node name="Container" type="Container" parent="VBoxContainer/HBoxContainer2"]
margin_right = 15.0
margin_bottom = 30.0
rect_min_size = Vector2( 15, 0 )

[node name="Item_List" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 19.0
margin_right = 77.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Item List"
valign = 1

[node name="Container2" type="Container" parent="VBoxContainer/HBoxContainer2"]
margin_left = 81.0
margin_right = 1005.0
margin_bottom = 30.0
rect_min_size = Vector2( 15, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 13
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 1009.0
margin_right = 1039.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
text = "x"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 1039.0
margin_bottom = 38.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 1039.0
margin_bottom = 572.0
size_flags_vertical = 3

[node name="Container" type="Container" parent="VBoxContainer/HBoxContainer3"]
margin_right = 15.0
margin_bottom = 530.0
rect_min_size = Vector2( 15, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3"]
margin_left = 19.0
margin_right = 1020.0
margin_bottom = 530.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_right = 200.0
margin_bottom = 530.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3
alignment = 1

[node name="CheckBox_Weapons" type="CheckBox" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer"]
margin_top = 225.0
margin_right = 200.0
margin_bottom = 249.0
theme = ExtResource( 3 )
group = ExtResource( 1 )
text = "Weapons"

[node name="CheckBox_Shields" type="CheckBox" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer"]
margin_top = 253.0
margin_right = 200.0
margin_bottom = 277.0
theme = ExtResource( 3 )
group = ExtResource( 1 )
text = "Shields"

[node name="CheckBox_Armor" type="CheckBox" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer"]
margin_top = 281.0
margin_right = 200.0
margin_bottom = 305.0
theme = ExtResource( 3 )
group = ExtResource( 1 )
text = "Armor"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_left = 204.0
margin_right = 208.0
margin_bottom = 530.0

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_left = 212.0
margin_right = 739.0
margin_bottom = 530.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer3"]
margin_right = 527.0
margin_bottom = 64.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 1, 0.968627, 0.886275, 1 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer3/HBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 2 )
expand = true

[node name="Class" type="Label" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 68.0
margin_top = 25.0
margin_right = 127.0
margin_bottom = 39.0
text = "Weapons"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer3"]
margin_top = 68.0
margin_right = 527.0
margin_bottom = 72.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer3"]
margin_top = 76.0
margin_right = 527.0
margin_bottom = 530.0
size_flags_vertical = 3

[node name="Container" type="Container" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer3/VBoxContainer"]
margin_right = 527.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer3/VBoxContainer"]
margin_top = 14.0
margin_right = 527.0
margin_bottom = 454.0
rect_min_size = Vector2( 0, 440 )

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer3/VBoxContainer/ScrollContainer"]
margin_right = 527.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
tabs_visible = false

[node name="Weapons_grid" type="GridContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer3/VBoxContainer/ScrollContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 3

[node name="Shield_grid" type="GridContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer3/VBoxContainer/ScrollContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 3

[node name="Armor_grid" type="GridContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer3/VBoxContainer/ScrollContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 3

[node name="Container2" type="Container" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer3/VBoxContainer"]
visible = false
margin_top = 603.0
margin_right = 618.0
margin_bottom = 613.0
rect_min_size = Vector2( 0, 10 )

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_left = 743.0
margin_right = 747.0
margin_bottom = 530.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_left = 751.0
margin_right = 1001.0
margin_bottom = 530.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 3
alignment = 1

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer2"]
margin_right = 250.0
margin_bottom = 259.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 0.968627, 0.886275, 1 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer2/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer2"]
margin_top = 263.0
margin_right = 250.0
margin_bottom = 267.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer2"]
margin_top = 271.0
margin_right = 250.0
margin_bottom = 530.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container2" type="Container" parent="VBoxContainer/HBoxContainer3"]
margin_left = 1024.0
margin_right = 1039.0
margin_bottom = 530.0
rect_min_size = Vector2( 15, 0 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 576.0
margin_right = 1039.0
margin_bottom = 580.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 584.0
margin_right = 1039.0
margin_bottom = 619.0
size_flags_vertical = 3

[node name="Container" type="Container" parent="VBoxContainer/HBoxContainer"]
margin_right = 862.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 866.0
margin_top = 10.0
margin_right = 966.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
text = "Edit Mode"
align = 1

[node name="Add" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 970.0
margin_right = 1020.0
margin_bottom = 35.0
rect_min_size = Vector2( 50, 30 )
text = "add +"

[node name="Container2" type="Container" parent="VBoxContainer/HBoxContainer"]
margin_left = 1024.0
margin_right = 1039.0
margin_bottom = 35.0
rect_min_size = Vector2( 15, 0 )

[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer2/Container" to="." method="_on_Container_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer2/Container" to="." method="_on_Container_mouse_exited"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer2/Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer/CheckBox_Weapons" to="." method="_on_CheckBox_Weapons_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer/CheckBox_Shields" to="." method="_on_CheckBox_Shields_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer/CheckBox_Armor" to="." method="_on_CheckBox_Armor_pressed"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/Add" to="." method="_on_Add_button_up"]
